skims/test/data/lib_path/f055_aws/cnf_unrestricted_cidrs.yaml
Resources:
  securityGroup1:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      SecurityGroupEgress:
        - CidrIp: 34.229.161.227/16
          FromPort: 8080
          IpProtocol: "tcp"
          ToPort: 8080
    Type: AWS::EC2::SecurityGroup
  securityGroup2:
    Properties:
      GroupDescription: groupDescription2
    Type: AWS::EC2::SecurityGroup
  securityGroup3:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
    Type: AWS::EC2::SecurityGroup
  securityGroupEgress1:
    Properties:
      CidrIpv6: ::/0
      FromPort: 1434
      GroupId:
        Ref: securityGroup2
      IpProtocol: tcp
      ToPort: 1434
    Type: AWS::EC2::SecurityGroupEgress
  securityGroupEgress2:
    Properties:
      CidrIpv6: ::/0
      FromPort: 8022
      GroupId:
        Ref: securityGroup2
      IpProtocol: tcp
      ToPort: 8022
    Type: AWS::EC2::SecurityGroupEgress
  securityGroupIngress1:
    Properties:
      CidrIpv6: ::/0
      FromPort: 22
      GroupId:
        Ref: securityGroup2
      GroupName: securityGroup2
      IpProtocol:
        Ref: IpInsecureProtocol
      ToPort: 22
    Type: AWS::EC2::SecurityGroupIngress
  securityGroupIngress2:
    Properties:
      CidrIp:
        Ref: IpSecurityGroup
      FromPort: 8080
      GroupName: securityGroup2
      IpProtocol: tcp
      ToPort: 8080
    Type: AWS::EC2::SecurityGroupIngress
  securityGroupIngress3:
    Properties:
      CidrIp:
        Ref: IpSecurityGroup
      FromPort: 8080
      GroupName: securityGroup2
      IpProtocol: tcp
      ToPort: 8080
    Type: AWS::EC2::SecurityGroupIngress
